--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
     </nav>
 
     <section class="hero max-w-6xl mx-auto pt-12">
-      <div class="flex flex-row">
+      <div class="flex flex-row items-center justify-between">
         <div class="flex flex-col gap-10">
           <div
             class="gap-x-2 px-3 py-2 small-badge flex flex-row bg-white rounded-full w-fit"
@@ -241,7 +241,10 @@
               class="text-lg hover:bg-indigo-950 bg-violet-700 text-white py-4 rounded-full px-10 font-semibold text-base hover:"
               >Try Free Trial</a
             >
-            <a href="#" class="flex flex-row gap-x-2">
+            <a
+              href="#"
+              class="flex flex-row gap-x-2 text-violet-700 font-semibold"
+            >
               <svg
                 width="25"
                 height="24"
@@ -306,6 +309,13 @@
               Schedule a Demo
             </a>
           </div>
+        </div>
+        <div class="flex flex-row items-center">
+          <img
+            class="w-[500px] h-[550px]"
+            src="../src/img/hero-img.png"
+            alt="hero-img.png"
+          />
         </div>
       </div>
     </section>
