--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
       </div>
     </nav>
 
-    <section class="hero max-w-6xl mx-auto pt-12">
+    <section class="hero max-w-6xl mx-auto py-12">
       <div class="flex flex-row items-center justify-between">
         <div class="flex flex-col gap-10">
           <div
@@ -319,5 +319,15 @@
         </div>
       </div>
     </section>
+
+    <div class="partners max-w-6xl mx-auto py-12">
+      <div class="flex flex-row gap-x-10 items-center justify-center">
+        <img src="../src/img/logo-1.svg" alt="logo-1" />
+        <img src="../src/img/logo-2.svg" alt="logo-2" />
+        <img src="../src/img/logo-3.svg" alt="logo-3" />
+        <img src="../src/img/logo-4.svg" alt="logo-4" />
+        <img src="../src/img/logo-5.svg" alt="logo-5" />
+      </div>
+    </div>
   </body>
 </html>
